# RyanairAPI

./: .gitignore  README.md  main.py  pyproject.toml
examples/: get_booking_by_id.py  get_bookings.py  get_user.py
ryanairAPI/: __init__.py  endpoints.py  exceptions.py  ryanairAPI.py
ryanairAPI/models/: __init__.py  booking.py  flight.py  room.py  segment.py  user_profile.py
src/ryanairAPI/: endpoints.py  ryanairAPI.py
src/ryanairAPI/models/: car.py  journey.py  user_profile.py
