[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RyanairAPI"
version = "0.0.1"
authors = [
  { name="Mattia Vidoni", email="vidonimattia@gmail.com" },
]
description = "A library for interacting with Ryanair's API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ch3p4ll3/RyanairAPI"
"Bug Tracker" = "https://github.com/ch3p4ll3/RyanairAPI/issues"